# colorsense

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  SECURITY.md  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
config/: palette_config.yaml
docs/: advanced.md  api.md  changelog.md  how-it-works.md  index.md  security.md  usage.md
docs/design/: detection-ranking-redesign.md  tuning-spec.md
eval/: README.md  calibrate_thresholds.py  colormetric.py  fit_aggregation.py  ground_truth.yaml  harvest_panel.py  probe.py  score.py
examples/: README.md  __init__.py  quickstart.py
examples/webservice/: __init__.py  app.py  main.py  policy.py  routes.py  schemas.py  settings.py  url_guard.py
src/colorsense/: __init__.py  _util.py  cli.py  config.py  models.py  pipeline.py  recommend.py
src/colorsense/classify/: __init__.py  components.py  tokens.py
src/colorsense/color/: __init__.py  match.py  primitives.py
src/colorsense/data/: palette_config.yaml
src/colorsense/harvest/: __init__.py  dom.py  render.py  screenshot.py  states.py  tokens.py
src/colorsense/net/: __init__.py  guard.py  politeness.py
src/colorsense/palette/: __init__.py  _pruning.py  detect.py  fusion.py  inventory.py  reconcile.py  roles.py  salience.py  usage.py
tests/: conftest.py  test_analyze_deadline.py  test_classify_components.py  test_classify_tokens.py  test_cli.py  test_color_match.py  test_color_primitives.py  test_config.py  test_examples_url_guard.py  test_examples_webservice.py  test_examples_webservice_app.py  test_guard.py  test_harvest.py  test_harvest_dom.py  test_harvest_screenshot.py  test_harvest_states.py  test_integration_sites.py  test_models.py  test_palette_detect.py  test_palette_fusion.py  test_palette_inventory.py  test_palette_pruning.py  test_palette_reconcile.py  test_palette_roles.py  test_palette_salience.py  test_palette_usage.py  test_pipeline.py  test_politeness_cache.py  test_politeness_concurrency.py  test_recommend.py  test_render_errors.py  test_robots_egress.py  test_shared_browser.py  test_util.py
tests/fixtures/: badge_chips.html  cards_site.html  consent.html  ds_site.html  gradient_cta.html  harvest_hardening.html  hover.html  inputs.html  legacy_site.html  media_mask.html  repo_probe_site.html  repo_site.html  subresource.html  subresource_asset.css  tokens.html  websocket.html
tests/golden/: cards_site.json  ds_site.json  legacy_site.json  repo_probe_site.json  repo_site.json
