[project]
name = "colorsense"
version = "0.3.0"
description = "Extract the rendered color palette from any website as a typed result."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cass" }]
keywords = ["color", "palette", "css", "design-tokens", "playwright", "web"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Multimedia :: Graphics",
  "Typing :: Typed",
]
dependencies = [
  "playwright>=1.40",
  "httpx>=0.27",
  "coloraide>=4",
  "pydantic>=2",
  "pyyaml>=6",
  "numpy>=1.26",
  "pillow>=10",
  "typer>=0.12",
]

[project.scripts]
colorsense = "colorsense.cli:app"

[project.urls]
Homepage = "https://github.com/cassidyhhaas/colorsense"
Documentation = "https://cassidyhhaas.github.io/colorsense/"
Repository = "https://github.com/cassidyhhaas/colorsense"
Issues = "https://github.com/cassidyhhaas/colorsense/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colorsense"]

[tool.hatch.build.targets.sdist]
# Ship the source tree needed to build and to run the test suite from a release,
# plus the documentation set.
include = ["src", "tests", "docs", "mkdocs.yml", "README.md", "LICENSE", "pyproject.toml", "SECURITY.md", "CONTRIBUTING.md", "CHANGELOG.md"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-randomly",
    "types-pyyaml",
    "types-Pillow",
    "pre-commit",
]
# Used only by examples/ (and the tests that exercise them); never part of the library's
# runtime dependencies. Install with: uv sync --group examples --group dev
examples = ["fastapi>=0.110", "uvicorn>=0.29"]
# Documentation site (MkDocs Material + mkdocstrings). Install with: uv sync --group docs
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.25"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
# Default check targets: the library plus the examples suite (CI and pre-commit run plain
# `uv run mypy`). Checking examples/ requires the `examples` dependency group for the
# FastAPI types.
files = ["src", "examples"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

# Libraries without bundled type stubs: silence missing-import only, no Any spill.
[[tool.mypy.overrides]]
module = ["coloraide.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
  "browser: test renders a real page via Playwright/Chromium (skipped in browserless CI with -m 'not browser')",
]
